--- a/client/src/Components/DoctorsWorkbench/MyDay/myday.css
+++ b/client/src/Components/DoctorsWorkbench/MyDay/myday.css
@@ -1,72 +1,177 @@
-.myday .top-bar {
-  padding: 5px;
-  background-color: #595959; }
-  .myday .top-bar .my-calendar {
-    padding: 1px;
-    /* Add media queries for smaller screens */ }
-    .myday .top-bar .my-calendar .month {
-      padding: 50px 25px;
-      width: 100%;
-      background: #1abc9c;
-      text-align: center; }
-    .myday .top-bar .my-calendar .month ul {
-      margin: 0;
-      padding: 0; }
-    .myday .top-bar .my-calendar .month ul li {
-      color: white;
-      font-size: 20px;
-      text-transform: uppercase;
-      letter-spacing: 3px; }
-    .myday .top-bar .my-calendar .month .prev {
-      float: left;
-      padding-top: 10px; }
-    .myday .top-bar .my-calendar .month .next {
-      float: right;
-      padding-top: 10px; }
-    .myday .top-bar .my-calendar .weekdays {
-      margin: 0;
-      padding: 10px 0;
-      background-color: #ddd; }
-    .myday .top-bar .my-calendar .weekdays li {
-      display: inline-block;
-      width: 13.6%;
-      color: #666;
-      text-align: center; }
-    .myday .top-bar .my-calendar .days {
-      padding: 10px 0;
-      background: #eee;
-      margin: 0; }
-    .myday .top-bar .my-calendar .days li {
-      list-style-type: none;
-      display: inline-block;
-      width: 13.6%;
-      text-align: center;
-      margin-bottom: 5px;
-      font-size: 12px;
-      color: #777; }
-    .myday .top-bar .my-calendar .days li .active {
-      padding: 5px;
-      background: #1abc9c;
-      color: white !important; }
-    @media screen and (max-width: 720px) {
-      .myday .top-bar .my-calendar .weekdays li,
+.myday {
+  margin-right: 10px;
+  margin-left: 10px; }
+  .myday .top-bar {
+    padding: 10px;
+    background-color: #595959; }
+    .myday .top-bar .my-calendar {
+      padding: 1px;
+      /* Add media queries for smaller screens */ }
+      .myday .top-bar .my-calendar .month {
+        padding: 50px 25px;
+        width: 100%;
+        background: #1abc9c;
+        text-align: center; }
+      .myday .top-bar .my-calendar .month ul {
+        margin: 0;
+        padding: 0; }
+      .myday .top-bar .my-calendar .month ul li {
+        color: white;
+        font-size: 20px;
+        text-transform: uppercase;
+        letter-spacing: 3px; }
+      .myday .top-bar .my-calendar .month .prev {
+        float: left;
+        padding-top: 10px; }
+      .myday .top-bar .my-calendar .month .next {
+        float: right;
+        padding-top: 10px; }
+      .myday .top-bar .my-calendar .weekdays {
+        margin: 0;
+        padding: 10px 0;
+        background-color: transparent; }
+      .myday .top-bar .my-calendar .weekdays li {
+        display: inline-block;
+        width: 13.6%;
+        color: #ffffff;
+        text-align: center; }
+      .myday .top-bar .my-calendar .days {
+        padding: 10px 0;
+        background: transparent;
+        margin: 0; }
       .myday .top-bar .my-calendar .days li {
-        width: 13.1%; } }
-    @media screen and (max-width: 420px) {
-      .myday .top-bar .my-calendar .weekdays li,
-      .myday .top-bar .my-calendar .days li {
-        width: 12.5%; }
+        list-style-type: none;
+        display: inline-block;
+        width: 13.6%;
+        text-align: center;
+        margin-bottom: 5px;
+        font-size: 12px;
+        color: #ffffff; }
       .myday .top-bar .my-calendar .days li .active {
-        padding: 2px; } }
-    @media screen and (max-width: 290px) {
-      .myday .top-bar .my-calendar .weekdays li,
-      .myday .top-bar .my-calendar .days li {
-        width: 12.2%; } }
-
-.myday .bottom-layout {
-  padding: 5px; }
-  .myday .bottom-layout .right-bottom-panel {
-    margin-top: 5px; }
-  .myday .bottom-layout .grey-label {
-    color: #6c757d;
-    padding-left: 10px; }
+        padding: 5px;
+        background: white;
+        color: #1abc9c !important; }
+      @media screen and (max-width: 720px) {
+        .myday .top-bar .my-calendar .weekdays li,
+        .myday .top-bar .my-calendar .days li {
+          width: 13.1%; } }
+      @media screen and (max-width: 420px) {
+        .myday .top-bar .my-calendar .weekdays li,
+        .myday .top-bar .my-calendar .days li {
+          width: 12.5%; }
+        .myday .top-bar .my-calendar .days li .active {
+          padding: 2px; } }
+      @media screen and (max-width: 290px) {
+        .myday .top-bar .my-calendar .weekdays li,
+        .myday .top-bar .my-calendar .days li {
+          width: 12.2%; } }
+  .myday .bottom-layout {
+    padding: 5px; }
+    .myday .bottom-layout .right-bottom-panel {
+      margin-top: 5px; }
+    .myday .bottom-layout .appointment-panel {
+      /* The actual timeline (the vertical ruler) */
+      /* Container around content */
+      /* The circles on the timeline */
+      /* Place the container to the left */
+      /* Place the container to the right */
+      /* Add arrows to the left container (pointing right) */
+      /* Add arrows to the right container (pointing left) */
+      /* Fix the circle for containers on the right side */
+      /* The actual content */
+      /* Media queries - Responsive timeline on screens less than 600px wide */ }
+      .myday .bottom-layout .appointment-panel .timeline {
+        position: relative;
+        max-width: 1200px;
+        margin: 0 auto; }
+      .myday .bottom-layout .appointment-panel .timeline::after {
+        content: "";
+        position: absolute;
+        width: 2px;
+        background-color: #000;
+        top: 0;
+        bottom: 0;
+        left: 50%;
+        margin-left: -3px; }
+      .myday .bottom-layout .appointment-panel .container {
+        padding: 10px 40px;
+        position: relative;
+        background-color: inherit;
+        width: 50%; }
+      .myday .bottom-layout .appointment-panel .container::after {
+        content: "";
+        position: absolute;
+        width: 25px;
+        height: 25px;
+        right: -17px;
+        background-color: white;
+        border: 4px solid #ff9f55;
+        top: 15px;
+        border-radius: 50%;
+        z-index: 1; }
+      .myday .bottom-layout .appointment-panel .left {
+        left: 0; }
+      .myday .bottom-layout .appointment-panel .right {
+        left: 50%; }
+      .myday .bottom-layout .appointment-panel .left::before {
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 22px;
+        width: 0;
+        z-index: 1;
+        right: 30px;
+        border: medium solid white;
+        border-width: 10px 0 10px 10px;
+        border-color: transparent transparent transparent white; }
+      .myday .bottom-layout .appointment-panel .right::before {
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 22px;
+        width: 0;
+        z-index: 1;
+        left: 30px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent; }
+      .myday .bottom-layout .appointment-panel .right::after {
+        left: -16px; }
+      .myday .bottom-layout .appointment-panel .content {
+        padding: 20px 30px;
+        background-color: white;
+        position: relative;
+        border-radius: 6px; }
+      @media screen and (max-width: 600px) {
+        .myday .bottom-layout .appointment-panel {
+          /* Place the timelime to the left */
+          /* Full-width containers */
+          /* Make sure that all arrows are pointing leftwards */
+          /* Make sure all circles are at the same spot */
+          /* Make all right containers behave like the left ones */ }
+          .myday .bottom-layout .appointment-panel .timeline::after {
+            left: 31px; }
+          .myday .bottom-layout .appointment-panel .container {
+            width: 100%;
+            padding-left: 70px;
+            padding-right: 25px; }
+          .myday .bottom-layout .appointment-panel .container::before {
+            left: 60px;
+            border: medium solid white;
+            border-width: 10px 10px 10px 0;
+            border-color: transparent white transparent transparent; }
+          .myday .bottom-layout .appointment-panel .left::after,
+          .myday .bottom-layout .appointment-panel .right::after {
+            left: 15px; }
+          .myday .bottom-layout .appointment-panel .right {
+            left: 0%; } }
+    .myday .bottom-layout .grey-label {
+      color: #292929;
+      padding-left: 10px;
+      padding-top: 5px;
+      font-style: bolder; }
+    .myday .bottom-layout .grey-label-right {
+      color: #292929;
+      padding-right: 10px;
+      padding-top: 5px;
+      font-style: bolder; }
