--- a/client/src/Components/DoctorsWorkbench/MyDay/myday.scss
+++ b/client/src/Components/DoctorsWorkbench/MyDay/myday.scss
@@ -1,8 +1,10 @@
 .myday {
-  .top-bar {
-    padding: 5px;
-    background-color: #595959;
+  margin-right: 10px;
+  margin-left: 10px;
 
+  .top-bar {
+    padding: 10px;
+    background-color: #595959;
     .my-calendar {
       padding: 1px;
       .month {
@@ -37,19 +39,19 @@
       .weekdays {
         margin: 0;
         padding: 10px 0;
-        background-color: #ddd;
+        background-color: transparent;
       }
 
       .weekdays li {
         display: inline-block;
         width: 13.6%;
-        color: #666;
+        color: #ffffff;
         text-align: center;
       }
 
       .days {
         padding: 10px 0;
-        background: #eee;
+        background: transparent;
         margin: 0;
       }
 
@@ -60,13 +62,13 @@
         text-align: center;
         margin-bottom: 5px;
         font-size: 12px;
-        color: #777;
+        color: #ffffff;
       }
 
       .days li .active {
         padding: 5px;
-        background: #1abc9c;
-        color: white !important;
+        background: white;
+        color: #1abc9c !important;
       }
 
       /* Add media queries for smaller screens */
@@ -103,13 +105,146 @@
       margin-top: 5px;
     }
     .appointment-panel {
+      .timeline {
+        position: relative;
+        max-width: 1200px;
+        margin: 0 auto;
+      }
+
+      /* The actual timeline (the vertical ruler) */
+      .timeline::after {
+        content: "";
+        position: absolute;
+        width: 2px;
+        background-color: #000;
+        top: 0;
+        bottom: 0;
+        left: 50%;
+        margin-left: -3px;
+      }
+
+      /* Container around content */
+      .container {
+        padding: 10px 40px;
+        position: relative;
+        background-color: inherit;
+        width: 50%;
+      }
+
+      /* The circles on the timeline */
+      .container::after {
+        content: "";
+        position: absolute;
+        width: 25px;
+        height: 25px;
+        right: -17px;
+        background-color: white;
+        border: 4px solid #ff9f55;
+        top: 15px;
+        border-radius: 50%;
+        z-index: 1;
+      }
+
+      /* Place the container to the left */
+      .left {
+        left: 0;
+      }
+
+      /* Place the container to the right */
+      .right {
+        left: 50%;
+      }
+
+      /* Add arrows to the left container (pointing right) */
+      .left::before {
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 22px;
+        width: 0;
+        z-index: 1;
+        right: 30px;
+        border: medium solid white;
+        border-width: 10px 0 10px 10px;
+        border-color: transparent transparent transparent white;
+      }
+
+      /* Add arrows to the right container (pointing left) */
+      .right::before {
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 22px;
+        width: 0;
+        z-index: 1;
+        left: 30px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+      }
+
+      /* Fix the circle for containers on the right side */
+      .right::after {
+        left: -16px;
+      }
+
+      /* The actual content */
+      .content {
+        padding: 20px 30px;
+        background-color: white;
+        position: relative;
+        border-radius: 6px;
+      }
+
+      /* Media queries - Responsive timeline on screens less than 600px wide */
+      @media screen and (max-width: 600px) {
+        /* Place the timelime to the left */
+        .timeline::after {
+          left: 31px;
+        }
+
+        /* Full-width containers */
+        .container {
+          width: 100%;
+          padding-left: 70px;
+          padding-right: 25px;
+        }
+
+        /* Make sure that all arrows are pointing leftwards */
+        .container::before {
+          left: 60px;
+          border: medium solid white;
+          border-width: 10px 10px 10px 0;
+          border-color: transparent white transparent transparent;
+        }
+
+        /* Make sure all circles are at the same spot */
+        .left::after,
+        .right::after {
+          left: 15px;
+        }
+
+        /* Make all right containers behave like the left ones */
+        .right {
+          left: 0%;
+        }
+      }
     }
     .encounters-panel {
     }
 
     .grey-label {
-      color: #6c757d;
+      color: #292929;
       padding-left: 10px;
+      padding-top: 5px;
+      font-style: bolder;
+    }
+
+    .grey-label-right {
+      color: #292929;
+      padding-right: 10px;
+      padding-top: 5px;
+      font-style: bolder;
     }
   }
 }
