--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -1,82 +1,91 @@
-.hptl-phase1-sideMenuBar .sideMenu-header {
-  color: white; }
-
-.hptl-phase1-sideMenuBar .side-menu-title {
-  padding-top: 15px;
-  padding-bottom: 8px;
-  font-size: 0.85rem;
-  text-transform: uppercase;
-  cursor: pointer; }
-  .hptl-phase1-sideMenuBar .side-menu-title span {
+.hptl-phase1-sideMenuBar {
+  width: 215px; }
+  .hptl-phase1-sideMenuBar .sideMenu-header {
+    color: white;
+    background: #292929; }
+  .hptl-phase1-sideMenuBar .side-menu-title {
+    padding-top: 15px;
+    padding-bottom: 8px;
+    font-size: 0.85rem;
+    text-transform: uppercase;
+    cursor: pointer; }
+    .hptl-phase1-sideMenuBar .side-menu-title span {
+      font-size: 0.85rem; }
+  .hptl-phase1-sideMenuBar .side-menu-arrow {
+    margin-top: 5px; }
+  .hptl-phase1-sideMenuBar .side-menu-downIcon {
+    padding-top: 5px;
+    padding-right: 5px;
+    cursor: pointer; }
+  .hptl-phase1-sideMenuBar .tree-structure-menu {
+    padding-left: 30px; }
+  .hptl-phase1-sideMenuBar .sub-menu-option {
+    padding-top: 10px;
+    background: #000000; }
+  .hptl-phase1-sideMenuBar ul {
+    border-left: 1px solid #d3d3d3;
+    margin-top: -9px; }
+  .hptl-phase1-sideMenuBar ul ul {
+    margin-top: -1.25em; }
+  .hptl-phase1-sideMenuBar li {
+    position: relative;
+    color: white;
+    list-style-type: none;
+    cursor: pointer;
+    padding-top: 8px;
     font-size: 0.85rem; }
-
-.hptl-phase1-sideMenuBar .side-menu-arrow {
-  margin-top: 5px; }
-
-.hptl-phase1-sideMenuBar .side-menu-downIcon {
-  padding-top: 5px;
-  padding-right: 5px;
-  cursor: pointer; }
-
-.hptl-phase1-sideMenuBar .tree-structure-menu {
-  padding-left: 30px; }
-
-.hptl-phase1-sideMenuBar .sub-menu-option {
-  padding-top: 10px;
-  background: #000000; }
-
-.hptl-phase1-sideMenuBar ul {
-  border-left: 1px solid #d3d3d3;
-  margin-top: -9px; }
-
-.hptl-phase1-sideMenuBar ul ul {
-  margin-top: -1.25em; }
-
-.hptl-phase1-sideMenuBar li {
-  position: relative;
-  color: white;
-  list-style-type: none;
-  cursor: pointer;
-  padding-top: 8px;
-  font-size: 0.85rem; }
-
-.hptl-phase1-sideMenuBar li:before {
-  content: "";
-  display: inline-block;
-  width: 8px;
-  height: 0;
-  position: absolute;
-  top: 15px;
-  left: -2.75em;
-  border-top: 1px solid #d3d3d3; }
-
-.hptl-phase1-sideMenuBar ul ul:before,
-.hptl-phase1-sideMenuBar h3:before,
-.hptl-phase1-sideMenuBar li:after {
-  content: "";
-  display: block;
-  width: 1em;
-  height: 1em;
-  top: 1em;
-  left: 0.4em; }
-
-.hptl-phase1-sideMenuBar .close-menu {
-  padding-top: 5px;
-  cursor: pointer;
-  color: #fff; }
-
-.hptl-phase1-sideMenuBar .paper {
-  background-color: #292929 !important;
-  left: 0px;
-  width: 250px; }
-
-.hptl-phase1-sideMenuBar .menuBar-title {
-  display: flex;
-  padding: 5px;
-  font-size: 20px; }
-
-.hptl-phase1-sideMenuBar svg {
-  height: 23px; }
+  .hptl-phase1-sideMenuBar li:before {
+    content: "";
+    display: inline-block;
+    width: 8px;
+    height: 0;
+    position: absolute;
+    top: 15px;
+    left: -2.75em;
+    border-top: 1px solid #d3d3d3; }
+  .hptl-phase1-sideMenuBar ul ul:before,
+  .hptl-phase1-sideMenuBar h3:before,
+  .hptl-phase1-sideMenuBar li:after {
+    content: "";
+    display: block;
+    width: 1em;
+    height: 1em;
+    top: 1em;
+    left: 0.4em; }
+  .hptl-phase1-sideMenuBar .close-menu {
+    padding-top: 5px;
+    cursor: pointer;
+    color: #fff; }
+  .hptl-phase1-sideMenuBar .paper {
+    background-color: #292929 !important;
+    left: 0px;
+    width: 250px; }
+  .hptl-phase1-sideMenuBar .menuBar-title {
+    display: flex;
+    padding: 5px;
+    font-size: 20px;
+    height: 49px;
+    background: #000; }
+  .hptl-phase1-sideMenuBar .sideBarClose {
+    width: 25px;
+    height: 25px;
+    padding: 0px;
+    margin: 0;
+    position: absolute;
+    display: block;
+    right: 13px;
+    top: 13px;
+    color: #fff;
+    border: 1px solid #fff;
+    text-align: center;
+    border-radius: 6px; }
+  .hptl-phase1-sideMenuBar .sideBarClose:hover {
+    color: #00bcb0;
+    border-radius: 6px;
+    border: 1px solid #00bcb0;
+    cursor: pointer; }
+  .hptl-phase1-sideMenuBar svg {
+    height: 23px; }
 
 .hptl-phase1-footer .main {
   background-color: #000000 !important;
@@ -94,8 +103,12 @@
 .screenDisplay {
   display: flex;
   width: 100%; }
-  .screenDisplay span {
-    padding-top: 12px; }
+  .screenDisplay h5 {
+    line-height: 46px;
+    padding: 0;
+    margin: 0;
+    font-size: 1.1rem;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); }
   .screenDisplay span:first-child {
     padding-top: 0px; }
   .screenDisplay span:last-child {
