--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@@ -1,9 +1,11 @@
 @import "../../../styles/algaehCssVariables.scss";
 
 .hptl-phase1-sideMenuBar {
+  width: 215px;
   // line-height: 1;
   .sideMenu-header {
     color: white;
+    background: #292929;
   }
   .side-menu-title {
     padding-top: 15px;
@@ -85,11 +87,31 @@
 
   .menuBar-title {
     display: flex;
-    // justify-content: center;
     padding: 5px;
     font-size: 20px;
+    height: 49px;
+    background: #000;
   }
-
+  .sideBarClose {
+    width: 25px;
+    height: 25px;
+    padding: 0px;
+    margin: 0;
+    position: absolute;
+    display: block;
+    right: 13px;
+    top: 13px;
+    color: #fff;
+    border: 1px solid #fff;
+    text-align: center;
+    border-radius: 6px;
+  }
+  .sideBarClose:hover {
+    color: #00bcb0;
+    border-radius: 6px;
+    border: 1px solid #00bcb0;
+    cursor: pointer;
+  }
   svg {
     height: 23px;
   }
@@ -118,8 +140,13 @@
 .screenDisplay {
   display: flex;
   width: 100%;
-  span {
-    padding-top: 12px;
+
+  h5 {
+    line-height: 46px;
+    padding: 0;
+    margin: 0;
+    font-size: 1.1rem;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   }
   span:first-child {
     padding-top: 0px;
