--- a/client/src/Components/common/BreadCrumb/breadcrumb.css
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.css
@@ -5,22 +5,23 @@
   border-bottom: 1px solid #ced4da; }
 
 .breadCrumb-Data {
-  margin-top: 64px;
+  margin: 0;
+  margin-top: 50px;
   background-color: #f8f8f8;
   height: 75px; }
   .breadCrumb-Data .hdg_bredcrump {
     background: url("images/breadcrump_border.png") no-repeat top right #fff; }
   .breadCrumb-Data .header {
-    padding-left: 20px; }
+    margin-top: 10px; }
     .breadCrumb-Data .header label {
-      padding: 4px;
       font-size: 1.4rem;
       font-weight: 300;
       text-transform: capitalize; }
   .breadCrumb-Data ul {
     list-style: none;
     display: flex;
-    padding-left: 11px; }
+    padding: 0;
+    margin: 0; }
     .breadCrumb-Data ul li {
       color: #d3d3d3;
       font-size: 0.75rem; }
