--- a/client/src/Components/common/BreadCrumb/breadcrumb.scss
+++ b/client/src/Components/common/BreadCrumb/breadcrumb.scss
@@ -8,16 +8,16 @@
   border-bottom: 1px solid #ced4da;
 }
 .breadCrumb-Data {
-  margin-top: 64px;
+  margin: 0;
+  margin-top: 50px;
   background-color: #f8f8f8;
   height: 75px;
   .hdg_bredcrump {
     background: url("images/breadcrump_border.png") no-repeat top right #fff;
   }
   .header {
-    padding-left: 20px;
+    margin-top: 10px;
     label {
-      padding: 4px;
       font-size: 1.4rem;
       font-weight: 300;
       text-transform: capitalize;
@@ -27,7 +27,8 @@
   ul {
     list-style: none;
     display: flex;
-    padding-left: 11px;
+    padding: 0;
+    margin: 0;
     // font-family: "Trebuchet MS", " Helvetica, sans-serif";
     li {
       color: #d3d3d3;
