--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -4,18 +4,17 @@ $forntSize: 0.7rem;
     .tab-button {
       font-size: $forntSize;
       font-weight: normal;
-      border-radius: 0px;
+      border-radius: 7px 7px 0 0;
       background-color: #f3f3f3;
       border: solid 1px #d0d8dc;
       color: #7c909b;
       padding: 6px 10px;
       cursor: pointer;
-      border-top-right-radius: 10px;
-      border-top-left-radius: 10px;
 
       &:hover {
         background-color: #fff !important;
         color: #68509f !important;
+        cursor: pointer;
       }
       &:focus {
         outline: none;
@@ -24,7 +23,7 @@ $forntSize: 0.7rem;
       &.active {
         background-color: #dbad64;
         color: #fff;
-        border: solid 1px #ffffff;
+        border: solid 1px #dbad64;
         pointer-events: none;
 
         &:hover {
@@ -130,23 +129,26 @@ $forntSize: 0.7rem;
   }
 
   .htpl1-phase1-btn-primary {
-    font-size: 14px;
-    font-weight: bold;
-    border-radius: 2px;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    border-radius: 5px;
     background-color: #44b6ae;
     border: solid 1px #44b6ae;
     color: #fff;
     padding: 2px 20px;
+    margin: 0 !important;
     cursor: pointer;
 
     &:hover {
-      background-color: #44b6ae;
+      color: #ffffff;
+      border: solid 1px #44b6ae;
+      background-color: #399993;
     }
 
     &:active {
       background-color: #44b6ae;
       box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.24), 0 0 8px 0 rgba(0, 0, 0, 0.12);
-      border: solid 1px #68509f;
+      border: solid 1px #44b6ae;
     }
 
     &:disabled {
@@ -158,24 +160,26 @@ $forntSize: 0.7rem;
   }
 
   .htpl1-phase1-btn-secondary {
-    font-size: 14px;
-    font-weight: bold;
-    border-radius: 2px;
-    background-color: #fff;
-    border: solid 1px #68509f;
-    color: #68509f;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    border-radius: 5px;
+    background-color: transparent;
+    border: solid 1px #44b6ae;
+    color: #44b6ae;
     padding: 2px 20px;
+    margin: 0 !important;
     cursor: pointer;
 
     &:hover {
-      color: #7850dd;
-      border: solid 1px #7850dd;
+      color: #44b6ae;
+      border: solid 1px #44b6ae;
+      background-color: #fff;
     }
 
     &:active {
-      color: #68509f;
-      border: solid 1px #68509f;
-      box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.24), 0 0 8px 0 rgba(0, 0, 0, 0.12);
+      color: #44b6ae;
+      border: solid 1px #44b6ae;
+      background-color: #fff;
     }
 
     &:disabled {
@@ -185,7 +189,36 @@ $forntSize: 0.7rem;
       cursor: not-allowed;
     }
   }
+  .htpl1-phase1-btn-others {
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    border-radius: 5px;
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #fff;
+    padding: 2px 10px;
+    cursor: pointer;
+    margin: 0 !important;
 
+    &:hover {
+      background-color: #fff;
+      border: 1px solid #fff;
+      color: #000;
+    }
+
+    &:active {
+      background-color: #fff;
+      border: 1px solid #fff;
+      color: #000;
+    }
+
+    &:disabled {
+      background-color: #d0d8dc;
+      color: rgba(72, 90, 99, 0.26);
+      border: none;
+      cursor: not-allowed;
+    }
+  }
   .ins-tab-container {
     .tab-button,
     label {
