--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -94,12 +94,14 @@ body {
       left: 3px; }
 
 :global .htpl1-phase1-btn-primary {
-  font-weight: bold;
-  border-radius: 2px;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  border-radius: 5px;
   background-color: #44b6ae;
   border: solid 1px #44b6ae;
   color: #fff;
   padding: 2px 20px;
+  margin: 0 !important;
   cursor: pointer; }
   :global .htpl1-phase1-btn-primary:hover {
     background-color: #44b6ae; }
@@ -114,20 +116,23 @@ body {
     cursor: not-allowed; }
 
 :global .htpl1-phase1-btn-secondary {
-  font-weight: bold;
-  border-radius: 2px;
-  background-color: #fff;
-  border: solid 1px #68509f;
-  color: #68509f;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  border-radius: 5px;
+  background-color: transparent;
+  border: solid 1px #44b6ae;
+  color: #44b6ae;
   padding: 2px 20px;
+  margin: 0 !important;
   cursor: pointer; }
   :global .htpl1-phase1-btn-secondary:hover {
-    color: #7850dd;
-    border: solid 1px #7850dd; }
+    color: #44b6ae;
+    border: solid 1px #44b6ae;
+    background-color: #fff; }
   :global .htpl1-phase1-btn-secondary:active {
-    color: #68509f;
-    border: solid 1px #68509f;
-    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.24), 0 0 8px 0 rgba(0, 0, 0, 0.12); }
+    color: #44b6ae;
+    border: solid 1px #44b6ae;
+    background-color: #fff; }
   :global .htpl1-phase1-btn-secondary:disabled {
     background-color: #d0d8dc;
     color: rgba(72, 90, 99, 0.26);
@@ -135,20 +140,23 @@ body {
     cursor: not-allowed; }
 
 :global .htpl1-phase1-btn-others {
-  font-weight: bold;
-  border-radius: 2px;
-  background-color: #5f5f5f;
-  border: solid 1px #fff;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  border-radius: 5px;
+  background-color: transparent;
+  border: 1px solid #fff;
   color: #fff;
-  padding: 2px 20px;
-  cursor: pointer; }
+  padding: 2px 10px;
+  cursor: pointer;
+  margin: 0 !important; }
   :global .htpl1-phase1-btn-others:hover {
-    color: #00bcb0;
-    border: solid 1px #be1616; }
+    background-color: #fff;
+    border: 1px solid #fff;
+    color: #000; }
   :global .htpl1-phase1-btn-others:active {
-    color: #68509f;
-    border: solid 1px #68509f;
-    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.24), 0 0 8px 0 rgba(0, 0, 0, 0.12); }
+    background-color: #fff;
+    border: 1px solid #fff;
+    color: #000; }
   :global .htpl1-phase1-btn-others:disabled {
     background-color: #d0d8dc;
     color: rgba(72, 90, 99, 0.26);
@@ -392,8 +400,7 @@ body {
 
 :global .hptl-phase1-footer .main {
   background-color: #000000 !important;
-  border-top: 1px solid #0000;
-  padding: 10px;
+  padding: 7px 0px;
   height: 40px;
   width: 100%;
   position: fixed;
