--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -133,13 +133,14 @@ body {
   }
 
   .htpl1-phase1-btn-primary {
-    // font-size: 14px;
-    font-weight: bold;
-    border-radius: 2px;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    border-radius: 5px;
     background-color: #44b6ae;
     border: solid 1px #44b6ae;
     color: #fff;
     padding: 2px 20px;
+    margin: 0 !important;
     cursor: pointer;
 
     &:hover {
@@ -161,24 +162,26 @@ body {
   }
 
   .htpl1-phase1-btn-secondary {
-    // font-size: 14px;
-    font-weight: bold;
-    border-radius: 2px;
-    background-color: #fff;
-    border: solid 1px #68509f;
-    color: #68509f;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    border-radius: 5px;
+    background-color: transparent;
+    border: solid 1px #44b6ae;
+    color: #44b6ae;
     padding: 2px 20px;
+    margin: 0 !important;
     cursor: pointer;
 
     &:hover {
-      color: #7850dd;
-      border: solid 1px #7850dd;
+      color: #44b6ae;
+      border: solid 1px #44b6ae;
+      background-color: #fff;
     }
 
     &:active {
-      color: #68509f;
-      border: solid 1px #68509f;
-      box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.24), 0 0 8px 0 rgba(0, 0, 0, 0.12);
+      color: #44b6ae;
+      border: solid 1px #44b6ae;
+      background-color: #fff;
     }
 
     &:disabled {
@@ -190,24 +193,26 @@ body {
   }
 
   .htpl1-phase1-btn-others {
-    // font-size: 14px;
-    font-weight: bold;
-    border-radius: 2px;
-    background-color: #5f5f5f;
-    border: solid 1px #fff;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    border-radius: 5px;
+    background-color: transparent;
+    border: 1px solid #fff;
     color: #fff;
-    padding: 2px 20px;
+    padding: 2px 10px;
     cursor: pointer;
+    margin: 0 !important;
 
     &:hover {
-      color: #00bcb0;
-      border: solid 1px rgb(190, 22, 22);
+      background-color: #fff;
+      border: 1px solid #fff;
+      color: #000;
     }
 
     &:active {
-      color: #68509f;
-      border: solid 1px #68509f;
-      box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.24), 0 0 8px 0 rgba(0, 0, 0, 0.12);
+      background-color: #fff;
+      border: 1px solid #fff;
+      color: #000;
     }
 
     &:disabled {
@@ -503,8 +508,7 @@ body {
   .hptl-phase1-footer {
     .main {
       background-color: #000000 !important;
-      border-top: 1px solid #0000;
-      padding: 10px;
+      padding: 7px 0px;
       height: 40px;
       width: 100%;
       position: fixed;
