--- a/client/src/Components/CommonSetup/common_setup.css
+++ b/client/src/Components/CommonSetup/common_setup.css
@@ -1,7 +1,8 @@
 .common_setup .common-section {
   border: 1px solid #d3d3d3;
   border-radius: 5px;
-  background: #fff; }
+  background: #fff;
+  padding-top: 15px; }
 
 .common_setup .ReactTable {
   max-height: 80vh !important; }
