--- a/client/src/Components/CommonSetup/common_setup.scss
+++ b/client/src/Components/CommonSetup/common_setup.scss
@@ -4,6 +4,7 @@
     border: 1px solid #d3d3d3;
     border-radius: 5px;
     background: #fff;
+    padding-top: 15px;
   }
   .ReactTable {
     max-height: 80vh !important;
